# Method-Payment-Dashboard

./: .env  .gitignore  Makefile  README.md  docker-compose.yml
app/: .dockerignore  Cargo.toml  app.Dockerfile  file.xml  mid.xml
app/src/: lib.rs  main.rs
app/src/endpoints/: mod.rs  reports.rs  transactions.rs  xmls.rs
app/src/entities/: account.rs  account_response.rs  entity.rs  entity_response.rs  mod.rs  payment.rs  payment_response.rs
app/src/schema/: address.rs  db.rs  employee.rs  mod.rs  payee.rs  payor.rs  transaction.rs  xml_parse.rs
app/src/utility/: method_client.rs  mod.rs  parser.rs
app/src/views/: payment_status.rs
db/: init.sql  seed.sql
ui/: .dockerignore  package-lock.json  package.json  ui.Dockerfile
ui/public/: index.html
ui/src/: App.js
ui/src/components/AppBar/: AppBar.js
ui/src/components/Dashboard/: Dashboard.js
ui/src/components/HomePage/: HomePage.js
ui/src/components/Profile/: Profile.js
